adding query filter

--- a/grav-xapi.yaml
+++ b/grav-xapi.yaml
@@ -28,5 +28,9 @@ filter:
         - jdoe
     groups:
         - Koko
+    uri:
+        query:
+            - key: 'backend'
+              value: 'tsv'            
     
         
