cleanup up and adding forms

--- a/grav-xapi.yaml
+++ b/grav-xapi.yaml
@@ -7,30 +7,30 @@ js:
     
 text_var: Custom Text added by the **Xapi** plugin (disable plugin to remove)
 lrs:
-#    ldap_user:
-#      endpoint: 'https://qast.test.salt.ch/data/'
-#      username: 3b5d9d1f2fc76e9cdb663f311613d5663fc694d1
-#      password: fa4a6689c00153b393905e095f44510d34138195
-#      version: '1.0.1'
+    ldap_user:
+      endpoint: 'https://qast.test.salt.ch/data/xAPI'
+      username: 3b5d9d1f2fc76e9cdb663f311613d5663fc694d1
+      password: fa4a6689c00153b393905e095f44510d34138195
+      version: '1.0.1'
     default:
       endpoint: 'https://qast.test.salt.ch/data/xAPI'
       username: 3b5d9d1f2fc76e9cdb663f311613d5663fc694d1
       password: fa4a6689c00153b393905e095f44510d34138195
-      version: '1.0.3'
+      version: '1.0.1'
 ## define activity tpe by template
 template_activityType:
-    default: http://activitystrea.ms/schema/1.0/page
+    default: "http://activitystrea.ms/schema/1.0/page"
     # @todo replace with 
-    form: http://activitystrea.ms/schema/1.0/task 
-    listing: 'http://activitystrea.ms/schema/1.0/collection'
+    form: "http://activitystrea.ms/schema/1.0/task"
+    listing: "http://activitystrea.ms/schema/1.0/collection"
 template_verb:
-    default: http://activitystrea.ms/schema/1.0/read
-    listing: http://activitystrea.ms/schema/1.0/search
-    all: http://activitystrea.ms/schema/1.0/search
-    login: https://brindlewaye.com/xAPITerms/verbs/loggedin/
-    report: http://id.tincanapi.com/verb/viewed
-    home: http://adlnet.gov/expapi/verbs/experienced
-    form: 'http://activitystrea.ms/schema/1.0/request'
+    default: "http://activitystrea.ms/schema/1.0/read"
+    listing: "http://activitystrea.ms/schema/1.0/search"
+    all: "http://activitystrea.ms/schema/1.0/search"
+    login: "https://brindlewaye.com/xAPITerms/verbs/loggedin/"
+    report: "http://id.tincanapi.com/verb/viewed"
+    home: "http://adlnet.gov/expapi/verbs/experienced"
+    form: "http://activitystrea.ms/schema/1.0/request"
 filter:
     template:
         - login
