--- a/languages.yaml
+++ b/languages.yaml
@@ -1,5 +1,7 @@
 en:
   PLUGIN_XAPI:
+    ENABLE_PHP: Enable Tincan PHP
+    ENABLE_JS: Enable Tincan JS
     TEXT_VARIABLE: Text Variable
     TEXT_VARIABLE_HELP: Text to add to the top of a page
     LRS_VAR: YAML Text Variable
