lower cases for actor iri and query filter by key only (was key valkue pair match before)

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "rusticisoftware/tincan": "@stable"
+    },
+  "autoload": {
+    "psr-4": {
+      "Grav\\Plugin\\XapiPlugin\\": "classes/"
     }
+  }
 }
