--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,6 +1,6 @@
 name: Xapi
 version: 0.3.6
-description: Add to grav LRS connectivity and basic page activity statements tracking. Turns your favorite grav app into an simple Learning Management System.
+description: Add to grav LRS connectivity and basic page activity statements tracking. Turns your favorite Grav app into an simple Learning Management System.
 icon: graduation-cap
 author:
   name: Gamahachaa
